# data-effects

./: ChangeLog.md  README.md  cabal.project  classy-effects-base.cabal  classy-effects-th.cabal  classy-effects.cabal  fourmolu.yaml
.github/workflows/: haskell.yml
CEPs/: CEP-01.md  CEP-02.md  CEP-03.md  CEP-04.md  README.md
Example/: DeriveHFunctor.hs
classy-effects/: ChangeLog.md  README.md  classy-effects.cabal
classy-effects-base/: ChangeLog.md  README.md  classy-effects-base.cabal
classy-effects-base/src/Control/Effect/: Class.hs
classy-effects-base/src/Control/Effect/Class/: HFunctor.hs
classy-effects-base/src/Control/Effect/Class/Machinery/: DepParam.hs  HFunctor.hs
classy-effects-base/test/: Driver.hs
classy-effects-th/: ChangeLog.md  README.md  classy-effects-th.cabal
classy-effects-th/src/Control/Effect/Class/: TH.hs
classy-effects-th/src/Control/Effect/Class/Machinery/: TH.hs
classy-effects-th/src/Control/Effect/Class/Machinery/TH/: Internal.hs  Send.hs
classy-effects-th/src/Control/Effect/Class/Machinery/TH/Send/: Internal.hs
classy-effects-th/src/Control/Effect/Class/TH/: Send.hs
classy-effects-th/src/Data/Effect/Class/: TH.hs
classy-effects-th/src/Data/Effect/Class/TH/: HFunctor.hs  Internal.hs
classy-effects-th/src/Data/Effect/Class/TH/HFunctor/: Internal.hs
classy-effects/src/: Prelude.hs
classy-effects/src/Control/Effect/Class/: Accum.hs  Chronicle.hs  Coroutine.hs  Embed.hs  Except.hs  Fail.hs  Fix.hs  Fresh.hs  Input.hs  Output.hs  Provider.hs  RWS.hs  Reader.hs  Resource.hs  Select.hs  State.hs  Writer.hs
classy-effects/src/Control/Effect/Class/Provider/: Implicit.hs
data-effects/: ChangeLog.md  data-effects.cabal
data-effects-core/: ChangeLog.md  data-effects-core.cabal
data-effects-core/src/Control/: Effect.hs
data-effects-core/src/Control/Effect/: Class.hs  Interpret.hs  Key.hs  Tag.hs  Transform.hs
data-effects-core/src/Control/Effect/Class/Machinery/: DepParams.hs  HFunctor.hs
data-effects-core/src/Data/: Effect.hs
data-effects-core/src/Data/Effect/: HFunctor.hs  HandlerVec.hs  Key.hs  OpenUnion.hs  Tag.hs
data-effects-core/src/Data/Effect/HFunctor/: HCont.hs  HCoyoneda.hs
data-effects-core/src/Data/Effect/HandlerVec/: Rec.hs  Vec.hs
data-effects-core/test/: OpenUnion.hs
data-effects-th/: ChangeLog.md  data-effects-th.cabal
data-effects-th/Example/: DeriveHFunctor.hs  Example.hs
data-effects-th/src/Control/Effect/Class/Machinery/: TH.hs
data-effects-th/src/Control/Effect/Class/Machinery/TH/: DepParams.hs  Internal.hs
data-effects-th/src/Control/Effect/Class/Machinery/TH/DepParams/: Internal.hs
data-effects-th/src/Control/Effect/Class/Machinery/TH/Send/: Internal.hs
data-effects-th/src/Data/Effect/: TH.hs
data-effects-th/src/Data/Effect/Class/TH/: HFunctor.hs
data-effects-th/src/Data/Effect/HFunctor/: TH.hs
data-effects-th/src/Data/Effect/HFunctor/TH/: Internal.hs
data-effects-th/src/Data/Effect/Key/: TH.hs
data-effects-th/src/Data/Effect/TH/: Internal.hs  Key.hs
data-effects/src/: Prelude.hs
data-effects/src/Control/Effect/Class/: Cont.hs  Coroutine.hs  Fix.hs  Output.hs  Provider.hs  Reader.hs  State.hs  Writer.hs
data-effects/src/Control/Effect/Class/Concurrent/: Thread.hs
data-effects/src/Data/Effect/: Accum.hs  CC.hs  Choice.hs  Chronicle.hs  Cont.hs  Coroutine.hs  Except.hs  Fail.hs  Fix.hs  Foldl.hs  Fresh.hs  Input.hs  KVStore.hs  Log.hs  NonDet.hs  Output.hs  Provider.hs  Reader.hs  Resource.hs  Select.hs  Shell.hs  Shift.hs  ShiftReset.hs  State.hs  SubJump.hs  Unlift.hs  Writer.hs
data-effects/src/Data/Effect/Concurrent/: Async.hs  Parallel.hs  Pipe.hs  Thread.hs  Timer.hs
data-effects/src/Data/Effect/Concurrent/Pipe/: Invertible.hs
data-effects/src/Data/Effect/Provider/: Implicit.hs
data-effects/src/Data/Effect/Unlift/: Provider.hs
src/Control/Effect/: Class.hs
src/Control/Effect/Class/: Accum.hs  HFunctor.hs  Output.hs  State.hs  TH.hs
src/Control/Effect/Class/HFunctor/: TH.hs
src/Control/Effect/Class/TH/: HFunctor.hs  Send.hs
src/Data/Effect/Class/: TH.hs
src/Data/Effect/Class/TH/: HFunctor.hs
