cabal-version:      2.4
name:               classy-effects
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: <synopsis>

-- A longer description of the package.
description: <description>

-- A URL where users can report bugs.
bug-reports: https://github.com/ymdryo/classy-effects

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Yamada Ryo <ymdfield@outlook.jp>
maintainer:         Yamada Ryo <ymdfield@outlook.jp>

-- A copyright notice.
copyright:
    Yamada Ryo, 2023

category: Control

extra-source-files:
    ChangeLog.md
    README.md
    CONTRIBUTING.md
    CLA

tested-with:
    GHC == 9.2.8

source-repository head
    type: git
    location: https://github.com/ymdryo/classy-effects

library
    exposed-modules:
        Control.Effect.Class.HFunctor.TH

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                   ^>= 4.16.4.0,
        classy-effects-base    ^>= 0.1,
        natural-transformation >= 0.4 && < 0.5,

    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures


test-suite test
    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        classy-effects,
        base,
        tasty       ^>= 1.4,
        tasty-hunit ^>= 0.10,

    type: exitcode-stdio-1.0

    build-tool-depends:
        tasty-discover:tasty-discover

    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures
