cabal-version:      2.4
name:               data-effects-core
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An interface for a handler-independent, typeclass-based effect system.

-- A longer description of the package.
description:
    This library provides definitions for CEPs (data-effects protocols) to standardize and unify
    the definition of effects in Haskell in a backend-library-agnostic manner. Please refer
    to [CEPs](https://github.com/sayo-hs/data-effects/blob/master/CEPs/README.md) for details.

    This library provides only the fundamental definitions for data-effects. Please also refer to
    the [data-effects](https://hackage.haskell.org/package/data-effects) package, which offers
    standard effect definitions compliant with CEPs, and
    the [data-effects-th](https://hackage.haskell.org/package/data-effects-th) package, which
    enables automatic compliance with CEPs.

-- A URL where users can report bugs.
bug-reports: https://github.com/sayo-hs/data-effects

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Yamada Ryo <ymdfield@outlook.jp>
maintainer:         Yamada Ryo <ymdfield@outlook.jp>

-- A copyright notice.
copyright:
    2023 Yamada Ryo,
    2023 Casper Bach Poulsen and Cas van der Rest

category: Control, Effect

extra-source-files:
    ChangeLog.md
    NOTICE
    README.md

tested-with:
    GHC == 9.2.8

source-repository head
    type: git
    location: https://github.com/sayo-hs/data-effects
    tag: v0.1.0
    subdir: data-effects-core

library
    exposed-modules:
        Control.Effect.Class
        Control.Effect.Class.Machinery.HFunctor
        Control.Effect.Class.Machinery.DepParams

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                          ^>= 4.16.4.0,
        compdata                      ^>= 0.13,
        mtl                           ^>= 2.2,

    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures


test-suite test
    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        data-effects-core,
        base,
        tasty                         ^>= 1.4,
        tasty-hunit                   ^>= 0.10,

    type: exitcode-stdio-1.0

    build-tool-depends:
        tasty-discover:tasty-discover

    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures
