cabal-version:      3.0
name:               data-effects-core
version:            0.4.0.0

-- A short (one-line) description of the package.
synopsis: A basic framework for effect systems based on effects represented by GADTs.

-- A longer description of the package.
description:
    This library provides core definitions of [data-effects](https://hackage.haskell.org/package/data-effects).

-- A URL where users can report bugs.
bug-reports: https://github.com/sayo-hs/data-effects

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Sayo contributors <ymdfield@outlook.jp>
maintainer:         ymdfield <ymdfield@outlook.jp>

-- A copyright notice.
copyright:
    2023-2025 Sayo contributors

category: Control, Effect

extra-doc-files:
    ChangeLog.md
    NOTICE
    README.md

tested-with: GHC == {9.8.2, 9.10.1, 9.12.1}

source-repository head
    type: git
    location: https://github.com/sayo-hs/data-effects
    tag: v0.4.0
    subdir: data-effects-core

library
    exposed-modules:
        Data.Effect
        Data.Effect.OpenUnion
        Data.Effect.Tag
        Data.Effect.HFunctor
        Data.Effect.HFunctor.HCont
        Control.Effect
        Control.Effect.Interpret
        Control.Effect.Transform

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                          >= 4.16.4 && < 4.22,
        mtl                           >= 2.2.2 && < 2.4,
        kan-extensions,
        free,
        unliftio

    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures


test-suite test
    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        data-effects-core,
        base,
        tasty                         >= 1.4 && < 1.6,
        tasty-hspec                   ^>= 1.2,
        hspec                         >= 2.5 && < 2.12,

    other-modules:
        OpenUnion

    type: exitcode-stdio-1.0

    build-tool-depends:
        tasty-discover:tasty-discover

    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures
