cabal-version:      2.4
name:               data-effects
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An interface for a handler-independent, typeclass-based effect system.

-- A longer description of the package.
description:
    This library provides definitions for CEPs (data-effects protocols) to standardize and unify
    the definition of effects in Haskell in a backend-library-agnostic manner. It also includes
    several standard effect definitions defined in compliance with CEPs, and Template Haskell
    functions to automatically make type classes conform to CEPs as effect classes.

    Please refer
    to [CEPs](https://github.com/sayo-hs/data-effects/blob/master/CEPs/README.md) for details.

    The Template Haskell functions are re-exported
    from the [data-effects-th](https://hackage.haskell.org/package/data-effects-th) package,
    while the fundamental definitions are re-exported
    from the [data-effects-core](https://hackage.haskell.org/package/data-effects-core)
    package.

-- A URL where users can report bugs.
bug-reports: https://github.com/sayo-hs/data-effects

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Yamada Ryo <ymdfield@outlook.jp>
maintainer:         Yamada Ryo <ymdfield@outlook.jp>

-- A copyright notice.
copyright: 2023 Yamada Ryo
category: Control, Effect

extra-source-files:
    ChangeLog.md
    NOTICE
    README.md

tested-with:
    GHC == 9.2.8

source-repository head
    type: git
    location: https://github.com/sayo-hs/data-effects
    tag: v0.1.0
    subdir: data-effects

library
    exposed-modules:
        Control.Effect.Class.Reader
        Control.Effect.Class.Writer
        Control.Effect.Class.State
        Control.Effect.Class.Except
        Control.Effect.Class.Accum
        Control.Effect.Class.Coroutine
        Control.Effect.Class.Input
        Control.Effect.Class.Output
        Control.Effect.Class.Provider
        Control.Effect.Class.Provider.Implicit
        Control.Effect.Class.Fix
        Control.Effect.Class.Fail
        Control.Effect.Class.Cont
        Control.Effect.Class.Chronicle
        Control.Effect.Class.Resource
        Control.Effect.Class.Concurrent.Thread

    reexported-modules:
        Control.Effect.Class,
        Control.Effect.Class.Machinery.HFunctor,
        Control.Effect.Class.Machinery.DepParams,
        Control.Effect.Class.Machinery.TH,
        Control.Effect.Class.Machinery.TH.Send,
        Control.Effect.Class.Machinery.TH.DepParams,
        Data.Effect.Class.TH,
        Data.Effect.Class.TH.HFunctor,

    -- Modules included in this executable, other than Main.
    other-modules:
        Prelude

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                          ^>= 4.16.4.0,
        data-effects-core           ^>= 0.1,
        data-effects-th             ^>= 0.1,
        these

    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures,
        PatternSynonyms,
        TemplateHaskell,
        PartialTypeSignatures

test-suite test
    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        data-effects,
        base,
        tasty                         ^>= 1.4,
        tasty-hunit                   ^>= 0.10,

    type: exitcode-stdio-1.0

    build-tool-depends:
        tasty-discover:tasty-discover

    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures
