cabal-version:      2.4
name:               data-effects
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A basic framework for an effect system based on effects represented by GADTs.

-- A longer description of the package.
description:

-- A URL where users can report bugs.
bug-reports: https://github.com/sayo-hs/data-effects

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Yamada Ryo <ymdfield@outlook.jp>
maintainer:         Yamada Ryo <ymdfield@outlook.jp>

-- A copyright notice.
copyright: 2023 Yamada Ryo
category: Control, Effect

extra-source-files:
    ChangeLog.md
    NOTICE
    README.md

tested-with:
    GHC == 9.2.8

source-repository head
    type: git
    location: https://github.com/sayo-hs/data-effects
    tag: v0.1.0
    subdir: data-effects

library
    exposed-modules:
        Data.Effect.Reader
        Data.Effect.Writer
        Data.Effect.State
        Data.Effect.Except
        Data.Effect.Accum
        Data.Effect.Coroutine
        Data.Effect.Input
        Data.Effect.Output
        Data.Effect.Provider
        Data.Effect.Provider.Implicit
        Data.Effect.Fix
        Data.Effect.Fail
        Data.Effect.Cont
        Data.Effect.Chronicle
        Data.Effect.Resource
        Data.Effect.Fresh
        Data.Effect.Concurrent.Thread

    reexported-modules:
        Data.Effect,
        Data.Effect.Tag,
        Data.Effect.HFunctor,
        Control.Effect,
        Control.Effect.Tag,

    -- Modules included in this executable, other than Main.
    other-modules:
        Prelude

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base                          ^>= 4.16.4.0,
        data-effects-core           ^>= 0.1,
        data-effects-th             ^>= 0.1,
        these,
        data-default

    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures,
        PatternSynonyms,
        TemplateHaskell,
        PartialTypeSignatures

test-suite test
    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        data-effects,
        base,
        tasty                         ^>= 1.4,
        tasty-hunit                   ^>= 0.10,

    type: exitcode-stdio-1.0

    build-tool-depends:
        tasty-discover:tasty-discover

    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures
